hover effect for portfolio

--- a/second.html
+++ b/second.html
@@ -69,8 +69,13 @@
             }
 
             #s-link:hover{
-                background-color: blue;
+                background-color:pink;
+                transition: .4s ease-out;
             }
+        
+        /* #address p{
+            line-height: 0px;
+        } */
 
         .fas, .far {
             color:palevioletred;
