--- a/second.html
+++ b/second.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <title>Document</title>
     <style>
@@ -41,6 +42,9 @@
             margin-top: 30px;
         }
 
+        #top-content .headings h1 {
+            font-family: 'Sacramento', cursive;
+        }
         #top-content .headings h1, #top-content .headings p {
             line-height: 5px;
         }
