--- a/second.html
+++ b/second.html
@@ -1,136 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+    />
     <title>Document</title>
     <style>
-        body {
-            margin:0;
-        }
-        * {
-            box-sizing: border-box;
-        }
+      body {
+        margin: 0;
+      }
+      * {
+        box-sizing: border-box;
+      }
 
-        a {
-            text-decoration: none;
-            color: black;
-        }
+      a {
+        text-decoration: none;
+        color: black;
+      }
 
-        hr {
-            border-top: none;
-            border:1px solid palevioletred;
-            }
+      hr {
+        border-top: none;
+        border: 1px solid palevioletred;
+      }
 
-        #top-content {
-            padding: 10px 20px;
-        }
+      #top-content {
+        padding: 0px 20px;
+      }
 
+      #top-content .image {
+        display: inline-block;
+        margin-top: 20px;
+      }
 
-        #top-content .image{
-            display: inline-block;
-            margin-top: 10px;
-        }
+      #top-content .headings {
+        display: inline-block;
+        padding-left: 35px;
+        vertical-align: top;
+        margin-top: 30px;
+      }
 
+      #top-content .headings h1 {
+        font-family: "Sacramento", cursive;
+      }
+      #top-content .headings h1,
+      #top-content .headings p {
+        line-height: 5px;
+      }
 
-        #top-content .headings{
-            display: inline-block;
-            padding-left: 30px;
-            vertical-align: top;
-            margin-top: 30px;
-        }
+      #bottom-content {
+        margin: -35px -20px;
+      }
 
-        #top-content .headings h1 {
-            font-family: 'Sacramento', cursive;
-        }
-        #top-content .headings h1, #top-content .headings p {
-            line-height: 5px;
-        }
+      #portfolio,
+      #address {
+        display: inline-block;
+        padding-left: 25px;
+      }
 
-        #bottom-content {
-            margin: -35px -20px;
-        }
+      #portfolio {
+        margin-left: 15px;
+      }
 
-        #portfolio, #address {
-            display: inline-block;
-            padding-left: 45px;
-        }
+      #address {
+        margin-top: 30px;
+      }
 
-        #s-link {
-            background-color: palevioletred;
-            color:white;
-            position: absolute;
-            top: 200px;
-            left: 40px;
-            /* display: inline-block; */
-            width: 110px;
-            height: 35px;
-            text-align: center;
-            padding-top: 8px;
-            border-radius: 5px;
-            }
+      #address p {
+        padding: 0;
+        margin: 0;
+      }
 
+      #s-link {
+        background-color: palevioletred;
+        color: white;
+        display: inline-block;
+        /* vertical-align: top; */
+        /* left: 40px; */
+        /* display: inline-block; */
+        width: 100px;
+        height: 35px;
+        text-align: center;
+        padding-top: 8px;
+        border-radius: 5px;
+        margin: 10px;
+      }
 
-            #s-link:hover {
-                background-color: pink;
-                cursor: pointer;
-                -webkit-transition: background-color .5s ease-out;
-                -moz-transition: background-color .5s ease-out;
-                -o-transition: background-color .5s ease-out;
-                transition: background-color .5s ease-out;
-            }
+      #s-link:hover {
+        background-color: pink;
+        cursor: pointer;
+        -webkit-transition: background-color 0.5s ease-out;
+        -moz-transition: background-color 0.5s ease-out;
+        -o-transition: background-color 0.5s ease-out;
+        transition: background-color 0.5s ease-out;
+      }
 
-
-    /* transition: background-color 250ms,border-color 250ms,color 250ms;
+      #icons {
+          margin-left: -5px;
+      }
+      /* transition: background-color 250ms,border-color 250ms,color 250ms;
     transition-property: background-color, border-color, color;
     transition-duration: 250ms, 250ms, 250ms;
     transition-timing-function: ease, ease, ease;
     transition-delay: 0s, 0s, 0s;
  */
 
-
-        
-        /* #address p{
+      /* #address p{
             line-height: 0px;
         } */
 
-        .fas, .far {
-            color:palevioletred;
-            margin-right: 16px;
-        }
+      .fas,
+      .far {
+        color: palevioletred;
+        margin-right: 16px;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div id="top-content">
-        <div class="image">
-            <img src="https://img.icons8.com/bubbles/162/000000/purposeful-man.png"/>
-        </div>
-        <div class="headings">
-            <h1>John Smith</h1>
-            <p>Marketer</p>
-            <p>Marketing | HubSpot</p>
-            <p>He / Him</p>
-            <hr>
-        </div>
+      <div class="image">
+        <img
+          src="https://img.icons8.com/bubbles/128/000000/purposeful-man.png"
+        />
+      </div>
+      <div class="headings">
+        <h1>John Smith</h1>
+        <p>Marketer</p>
+        <p>Marketing | HubSpot</p>
+        <p>He / Him</p>
+        <hr />
+      </div>
     </div>
     <div id="bottom-content">
-        <div id="portfolio">
-            <a href="#" id="s-link">Portfolio</a>
-            <div id="icons">
-                <a href="#"><img src="https://img.icons8.com/windows/32/000000/rss.png"/></a>
-                <a href="#"><img src="https://img.icons8.com/cute-clipart/32/000000/linkedin.png"/></a>
-                <a href="#"><img src="https://img.icons8.com/color/32/000000/twitter.png"/></a>           
-                <a href="#"><img src="https://img.icons8.com/offices/32/000000/slack.png"/></a>    
-            </div>
+      <div id="portfolio">
+        <a href="#" id="s-link">Portfolio</a>
+        <div id="icons">
+          <a href="#"
+            ><img src="https://img.icons8.com/windows/32/000000/rss.png"
+          /></a>
+          <a href="#"
+            ><img
+              src="https://img.icons8.com/cute-clipart/32/000000/linkedin.png"
+          /></a>
+          <a href="#"
+            ><img src="https://img.icons8.com/color/32/000000/twitter.png"
+          /></a>
+          <a href="#"
+            ><img src="https://img.icons8.com/offices/32/000000/slack.png"
+          /></a>
         </div>
-        <div id="address">
-            <p><i class="fas fa-phone-alt"></i>893 984 220</p>
-            <p><i class="far fa-envelope"></i>john@smith.com</p>
-            <p><i class="fas fa-link"></i><a href="https://www.ceospeaking.com" target="_blank">CeoSpeaking.com</a></p>
-            <p><i class="fas fa-map-marker-alt"></i>Huzao, China</p>
-        </div>
+      </div>
+      <div id="address">
+        <p><i class="fas fa-phone-alt"></i>893 984 220</p>
+        <p><i class="far fa-envelope"></i>john@smith.com</p>
+        <p>
+          <i class="fas fa-link"></i
+          ><a href="https://www.ceospeaking.com" target="_blank"
+            >CeoSpeaking.com</a
+          >
+        </p>
+        <p><i class="fas fa-map-marker-alt"></i>Huzao, China</p>
+      </div>
     </div>
-</body>
+  </body>
 </html>
