--- a/second.html
+++ b/second.html
@@ -62,6 +62,7 @@
       #address {
         display: inline-block;
         padding-left: 25px;
+        margin-top:  25px;
       }
 
       #portfolio {
@@ -92,17 +93,9 @@
         margin: 10px;
       }
 
-      #s-link:hover {
-        background-color: pink;
-        cursor: pointer;
-        -webkit-transition: background-color 0.5s ease-out;
-        -moz-transition: background-color 0.5s ease-out;
-        -o-transition: background-color 0.5s ease-out;
-        transition: background-color 0.5s ease-out;
-      }
-
       #icons {
           margin-left: -5px;
+          margin-top:  15px;
       }
       /* transition: background-color 250ms,border-color 250ms,color 250ms;
     transition-property: background-color, border-color, color;
@@ -126,7 +119,7 @@
     <div id="top-content">
       <div class="image">
         <img
-          src="https://img.icons8.com/bubbles/128/000000/purposeful-man.png"
+          src="1.gif"
         />
       </div>
       <div class="headings">
